# pegasus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  pegasus.cabal  test.sh
.github/workflows/: ci.yaml
config/: genesis-shelley.json
exe/: Main.hs
src/: Pegasus.hs
src/Pegasus/: CardanoNode.hs  Embed.hs  EmbedTH.hs
src/Pegasus/CardanoNode/: Embed.hs  EmbedTH.hs
test/: Main.hs
test/Pegasus/: CardanoNodeSpec.hs
