cabal-version:   3.4
name:            pegasus
version:         0.1.0
synopsis:        Fast, one-click, seeded devnet for Cardano
license:         Apache-2.0
license-file:    LICENSE
author:          Sebastian Nagel
maintainer:      sebastian.nagel@ncoding.at
copyright:       2024 Sebastian Nagel
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-files:
  config/byron-delegate.key
  config/byron-delegation.cert
  config/cardano-node.json
  config/genesis-alonzo.json
  config/genesis-byron.json
  config/genesis-conway.json
  config/genesis-shelley.json
  config/kes.skey
  config/opcert.cert
  config/vrf.skey

common project-config
  default-language:   GHC2021
  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

library
  import:          project-config
  exposed-modules:
    Paths_pegasus
    Pegasus
    Pegasus.CardanoNode
    Pegasus.Embed
    Pegasus.EmbedTH

  build-depends:
    , aeson
    , async
    , base                 ^>=4.18.1.0
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , directory
    , file-embed
    , filepath
    , microlens
    , microlens-aeson
    , template-haskell
    , text
    , time
    , typed-process
    , unix

  hs-source-dirs:  src

executable pegasus
  import:         project-config
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , base           ^>=4.18.1.0
    , pegasus
    , pretty-simple

  ghc-options:    -threaded -rtsopts

test-suite integration
  import:             project-config
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  build-depends:
    , base             ^>=4.18.1.0
    , bytestring
    , hspec
    , HUnit
    , microlens
    , microlens-aeson
    , stm
    , time
    , typed-process

  build-tool-depends: pegasus:pegasus
  ghc-options:        -threaded -rtsopts
